lab2-05-index.html

--- a/实验2-提交/lab2-05-index.html
+++ b/实验2-提交/lab2-05-index.html
@@ -176,17 +176,16 @@
         <p class="title-sub">Personal Resume</p>
         <table class="resume-table">
             <tr>
-                <th class="merged-header" colspan="6">基本信息</th>
+                <th class="merged-header" colspan="5">基本信息</th>
             </tr>
             <tr>
                 <th width="15%">姓名</th>
                 <td width="20%">李炅馨</td>
                 <th width="15%">出生年月</th>
                 <td width="20%">2006.10</td>
-                <th width="15%" class="photo-cell" rowspan="4">
+                <th width="20%" class="photo-cell" rowspan="4">
                     <img src="./照片.jpg" alt="个人照片" class="profile-photo">
                 </th>
-                <td width="15%" rowspan="4"></td>
             </tr>
             <tr>
                 <th>性别</th>
@@ -202,9 +201,9 @@
             </tr>
             <tr>
                 <th>联系方式</th>
-                <td>13361211316</td>
+                <td>13361211316</a></td>
                 <th>邮箱</th>
-                <td>2829089112@qq.com</td>
+                <td>2829089112@qq.com</a></td>
             </tr>
         </table>
         <table class="resume-table">
@@ -243,6 +242,7 @@
                 </td>
             </tr>
         </table>
+        
         <div class="icon-section">
             <div class="icon-box">
                 <h3>技能证书</h3>
@@ -257,10 +257,12 @@
                 <h3>兴趣爱好</h3>
                 <ol class="icon-list">
                     <li><i class="fas fa-laptop-code"></i> web开发</li>
-                    <li><i class="fas fa-sport"></i>羽毛球、足球</li>
+                    <li><i class="fas fa-table-tennis"></i> 羽毛球</li>
+                    <li><i class="fas fa-futbol"></i> 足球</li>
                 </ol>
             </div>
         </div>
+        
         <div class="self-evaluation">
             <h3>自我评价</h3>
             大一学年聚焦计算机科学与技术专业基础学习，同时明确 Web 应用为核心兴趣方向，形成 “理论 + 实践” 的学习模式。<br>
