lab2-05-index.html

--- a/实验2-提交/lab2-05-index.html
+++ b/实验2-提交/lab2-05-index.html
@@ -183,7 +183,7 @@
                 <td width="20%">李炅馨</td>
                 <th width="15%">出生年月</th>
                 <td width="20%">2006.10</td>
-                <th width="20%" class="photo-cell" rowspan="4">
+                <th width="20%" class="photo-cell" rowspan="4" colspan="2">
                     <img src="./照片.jpg" alt="个人照片" class="profile-photo">
                 </th>
             </tr>
